Changes since 2.9.6:
	* need to do work on ( and ) in zones!
	- added local-query-address (Mark Bergsma)
	- zone2sql now removes dots in the SOA record
	- zone2sql no longer silently tries to read directories
	- improved error reporting if unable to figure out IP addresses for
	  slaves

Changes since 2.9.5:
	- implemented isMaster in bindbackend (we now react to notifies)
	- added zoneId to mboxfw stuff - massive speedup
	- $GENERATE off by one bug (Christian Laursen)
	- Outgoing AXFR crashes with certain backends or frequent AXFRs
		(thanks to ISP Services for testing this in production)
	- GODBC
	- LDAP
	- possible issue resolved with case differences in domain names and incoming AXFR
	- now also accept 'in' as 'IN' (noted by Joris Vandalon)
	- $include fixed, sometimes lost a " or the last character (noted by Joris Vandalon)

Changes since 2.9.4:
	- heap of work in shortening dnspacket.cc (factor out common operations)
	- work on recursor
	- recursor renamed 
	- added unknown record type support (+1024)
	- added names for SIG and KEY records
	- HINFO incoming
	- UltraSparc alignment issues Chris Andrews
	- compression (Mark Bergsma)
	- SRV records (Ueli Heuer)

	- updated J root-server IP address in the recursor
	- added USR1 forced log output
	- changed meaning of 'cache hits -> packets which could be answered
		without sending packets out
	- added -lz (James H. Cloos Jr) to MySQL
	- added name to webserver (Daniel Meyer)
	- fixed zone2sql root-zone issues (Brad Knowles)
	
Changes since 2.9.3a:
feat	- make *all* sql in gsqlbackends available for configuration (Martin Klebermass/bert hubert)
feat	- recursor
impr	- axfr backend transaction now only started after first actual
	  record is in
impr	- improved zone parser error message about time specification
impr	- huge improvement in performance of bind-domain-status
		(spotted by Erik Bos)
impr	- AXFR terminated with an EOF is now an error, unless a second SOA
		was seen
impr	- 'migration' chapter was outdated	